force-app/main/default/objects/Drive_Marketing_Programs__c/fields/Blood_Drive_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Blood_Drive_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blood Drive Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Drive_Marketing_Program</relationshipName>
    <type>Lookup</type>
</CustomField>