force-app/main/default/objects/Drive_Marketing_Programs__c/fields/Booking_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_End_Date__c</fullName>
    <formula>Marketing_Program__r.Booking_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking End Date</label>
    <type>Date</type>
</CustomField>