force-app/main/default/objects/Drive_Marketing_Programs__c/fields/Marketing_Program__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Program__c</fullName>
    <label>Marketing Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Marketing_Program__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Marketing_Program__c</referenceTo>
    <relationshipLabel>Drive Affiliations</relationshipLabel>
    <relationshipName>Drive_Marketing_Program</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>