force-app/main/default/objects/Drive_Marketing_Programs__c/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Migration ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>