force-app/main/default/objects/Drive_Marketing_Programs__c/fields/Removed_By__c.field-meta.xml
<CustomField>
    <fullName>Removed_By__c</fullName>
    <formula>IF(
(NOT(ISNULL(Date_Removed__c))) ,(LastModifiedBy.FirstName + &quot; &quot; + LastModifiedBy.LastName),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Removed By</label>
    <type>Text</type>
</CustomField>