force-app/main/default/objects/Drive_Marketing_Programs__c/validationRules/Restrict_Affiliation_To_Allowed_Profiles.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Affiliation_To_Allowed_Profiles</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
  $Profile.Name &lt;&gt; &quot;Global Admin&quot;,
  $Profile.Name &lt;&gt; &quot;Informatica Integration Users&quot;,
  NOT(
    CONTAINS(
      Marketing_Program__r.Allowed_Profiles_As_Text__c,
      $Profile.Name &amp; &quot;,&quot;
    )
  )
)</errorConditionFormula>
    <errorMessage>You do not have permission to modify this Affiliation. Your profile is not listed in Allowed Profiles on the Affiliation.</errorMessage>
</ValidationRule>