force-app/main/default/objects/Drive_Marketing_Programs__c/validationRules/Restrict_FS_Drives_Marketing_Programs.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_FS_Drives_Marketing_Programs</fullName>
    <active>true</active>
    <description>Fixed Site Drives should not be assigned Marketing Programs. This rule prevents a user from changing a Drive Marketing Program assigned to a Mobile Drive  to a FS Drivet.</description>
    <errorConditionFormula>Blood_Drive_Opportunity__r.RecordType.Name = &quot;Fixed Site&quot;</errorConditionFormula>
    <errorMessage>Marketing Programs may only be assigned to Mobile Drives.</errorMessage>
</ValidationRule>