force-app/main/default/objects/Drive_Marketing_Programs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Blood_Drive_Opportunity__c</columns>
    <columns>Marketing_Program__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>